--- a/app/views/challenges/_four_corner.html.erb
+++ b/app/views/challenges/_four_corner.html.erb
@@ -125,7 +125,7 @@
 					</div>
 					
 					<div class="row" id="fc-milieu-2">
-						<div class='content'><%= @challenge.context%></div>
+						<div class='content'><%= h Rinku.auto_link(@challenge.context).gsub(/\n/, '<br/>').html_safe%></div>
 					</div>
 
 					<div class="row" id="fc-milieu-3-b">
@@ -416,7 +416,7 @@
 		<% if !@challenge.context == nil%>
 		<div class="row">
 			<div class "row" id="to-be-closed">
-				<div id="effective-context"><div class="text"><%= h(@challenge.content).gsub(/\n/, '<br/>').html_safe%></div></div>
+				<div id="effective-context"><div class="text"><%= h Rinku.auto_link(@challenge.content).gsub(/\n/, '<br/>').html_safe%></div></div>
 			</div>
 			<div class="row" id ="openning-context">
 				<div class="texte">Contexte</div>
