--- a/app/assets/stylesheets/arguments.css.scss
+++ b/app/assets/stylesheets/arguments.css.scss
@@ -440,7 +440,7 @@
 			font-family:"georgia";
 			font-size: 14px;
 			font-style: italic;
-
+			a{color: #2200CC;}
 		}
 	}
 	
@@ -497,7 +497,8 @@
 	padding-bottom:10px;
 	font-family:"georgia";
 	font-size: 14px;
-	
+	word-wrap:break-word;
+	a{color: #2200CC;}	
 	img{width: 365px; height: 250px;}
 		.image{
 		.texte{
@@ -720,6 +721,7 @@
 			font-family:"georgia";
 			font-size: 14px;
 			font-style: italic;
+			a{color: #2200CC;}
 		}
 	}
 	
@@ -777,7 +779,8 @@
 	text-align: left;
 	padding-bottom:10px;
 	font-family:"georgia";
-	
+	word-wrap:break-word;
+	a{color: #2200CC;}	
 	font-size: 14px;
 	
 	img{width: 365px; height: 250px;}
@@ -1008,6 +1011,7 @@
 			font-family:"georgia";
 			font-size: 14px;
 			font-style: italic;
+			a{color: #2200CC;}			
 		}
 	}
 	
@@ -1055,13 +1059,15 @@
 	.toggle{
 	background-color: white;
 	margin-left: -20px;
+	
 	#argcontent{
 	padding: 15px;
 	margin-top:20px;
 	text-align: left;
 	padding-bottom:10px;
 	font-family:"georgia";
-	
+	word-wrap:break-word;
+	a{color: #2200CC;}	
 	font-size: 14px;
 	
 	img{width: 365px; height: 250px;}
@@ -1294,6 +1300,7 @@
 			font-family:"georgia";
 			font-size: 14px;
 			font-style: italic;
+			a{color: #2200CC;}		
 		}
 	}
 	
@@ -1347,6 +1354,8 @@
 	text-align: left;
 	padding-bottom:10px;
 	font-family:"georgia";
+	word-wrap:break-word;
+	a{color: #2200CC;}	
 	}
 	
 	}
@@ -1557,6 +1566,7 @@
 		
 		.cont{
 			word-wrap:break-word;
+			a{color: #2200CC;}
 			padding-top:8px;
 			padding-right:5	px;
 			font-family:"georgia";
@@ -1615,6 +1625,8 @@
 	text-align: left;
 	padding-bottom:10px;
 	font-family:"georgia";
+	word-wrap:break-word;
+	a{color: #2200CC;}
 	}
 	
 	}
