--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -130,6 +130,7 @@
 				padding-bottom:10px;
 				}
 			border-bottom:8px solid white;
+				a{color: #2200CC;}
 		}
 
 		#vote{
@@ -1418,6 +1419,7 @@ border-image: url(border2.png) 13 fill repeat;
 				padding-bottom:5px;
 				margin-left:5px;
 				margin-right: 5px;
+				background-color: blue;
 				}
 				.image-bulle2{
 				padding-bottom:5px;
@@ -1483,6 +1485,8 @@ border-image: url(border2.png) 13 fill repeat;
 					padding-bottom:10px;
 					}
 				border-bottom:8px solid white;
+				
+				a{color: #2200CC;}
 			}
 
 			#vote{
@@ -1647,11 +1651,12 @@ border-image: url(border2.png) 13 fill repeat;
 	
 
 	#hover-categorie{
-	margin-top:-129px;
-	margin-left:947px;
+	margin-top:-20px;
+	margin-bottom:20px;
+	margin-left:610px;
 	height:  25px;
-	width: 90px;
-	background-color: #808080;
+	width: 110px;
+	background-color: #AAD0FF;
 	position: relative;
 	z-index: 10;
 	
@@ -1663,8 +1668,8 @@ border-image: url(border2.png) 13 fill repeat;
 		padding-top:4px;
 	}	
 	.arrow-left{
-		margin-top:-20px;
-		padding-left: 78px;
+		margin-top:-21px;
+		padding-left: 98px;
 	 	width: 0; 
 	 	height: 0; 
 	 	border-top: 12px solid transparent;
@@ -1737,15 +1742,17 @@ border-image: url(border2.png) 13 fill repeat;
 	
 	
 	#catcat{
-	margin-left:946px;
+	margin-left:610px;
 	height:65px;
-	width:90px;
-	background-color:#AAD0FF;
+	width:110px;
+	margin-top:-85px;
+	margin-bottom:20px;
+	background-color:#C9C9C9;
 	position: relative;
 	z-index: 10;
 	
 	 .arrow-left{
-		padding-left:58px;
+		padding-left:78px;
 	 	width: 0; 
 	 	height: 0; 
 	 	border-top: 32px solid transparent;
@@ -1753,18 +1760,19 @@ border-image: url(border2.png) 13 fill repeat;
 	 	border-right:32px solid white;
 	 }
 	.image{
-	margin-left:10px;
+	margin-left:25px;
 	margin-top:-48px;
 	}
 	}
 	
 	#explications{
-	margin-left: 200px;
-	margin-top:40px;
+	margin-left: 100px;
 	position: relative;
 	z-index: 10;
+	width: 370px;
 	
 		.bulle1{
+		margin-left:20px;
 		margin-top:-60px;
 		}
 		.bulle2{
@@ -1797,12 +1805,11 @@ border-image: url(border2.png) 13 fill repeat;
 	}
 	
 	#share{
-	margin-left: 420px;
+	margin-left: 370px;
 	margin-bottom: 20px;
 	background-color: #AAD0FF;
 	height:50px;
 	width: 240px;
-	border-radius: 12px;
 	padding-top:15px;
  	text-align: center;
 	color: black;
@@ -1830,15 +1837,14 @@ border-image: url(border2.png) 13 fill repeat;
 
 	
 	.ok{
-	position: relative;
-	z-index:0;
-	margin-left:-80px;
+
+	margin-left:-103px;
+	
 	.okk{
 	margin-top: -30px;
-	opacity:0;
-	
+	opacity:0;	
 	.social-share-button{
-	margin-left:-20px;
+	margin-left:-25px;
 	}
 	}
 	
@@ -1846,10 +1852,8 @@ border-image: url(border2.png) 13 fill repeat;
 	
 	
 	.okkk{
-	position: relative;
-	z-index:0;
 	margin-top: -31px;
-	margin-left: 100px;
+	margin-left: 95px;
 	.okkkk{
 	margin-top: -20px;
 	margin-left:20px;
