--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,31 @@
-<% provide(:title, 'All users') %>
-<h1>All users</h1>
 
-<ul class="users">
-		<% @users.each do |l|%>
-		<div>
-			<%= l.email%>
-			<%= l.name %>
-		</div>
-		<% end%>
-</ul>
+<section id="tableuser">
+  <div class="container">
+    <div class="row">
+      <div class="span6">
+        <h3>ALL USERS</h3><%= @users.count%>
+      </div>
+    </div>
+
+<div class="CSSTableGenerator">
+
+<table>
+  <tr>
+	<td><%= sortable "email"%></td> 
+    <td><%= sortable "name"%></td>
+    <td><%= sortable "date"%></td>
+  </tr>
+
+<% @users.each do |user| %>
+  <tr>
+	 <td><%= user.email %></td>
+    <td><%= link_to user.name, user %></td>
+    <td><%= link_to user.created_at.strftime("%m/%d/%Y"), user %></td>
+<% end %>
+</table>
+
+<br />
+
+</div>
+</div>
+</section>
