--- a/app/views/debates/_partenariat.html.erb
+++ b/app/views/debates/_partenariat.html.erb
@@ -1,3 +1,4 @@
+
 <section id="partenariat-debate">
 	<div class="container">
 		<% if current_user && current_user.try(:admin?)%>
@@ -10,18 +11,14 @@
 					<div><%= link_to "promote5", promote5_debate_path(@debate), class: "text"%>  </div>
 					<div><%= link_to "partenaire", promote5_debate_path(@debate), class: "text"%>  </div>
 					<div><%= link_to "edit",edit_debate_path(@debate), class: "text"%>    </div>                                                        
-					<div><%= link_to "publush",publish_debate_path(@debate), class: "text"%>    </div>                                                        
+					<div><%= link_to "publish",publish_debate_path(@debate), class: "text"%>    </div>                                                        
 		</div>                                                                
 		<% end %>		
 		
 		<div id="share">
-			<span>Partagez le débat sur</br></span>
-				<div class="ok">
-				<%=image_tag('facebook-blanc.png', :alt => 'Moutoners', class: "image")%>
-				<div class="okk"><%= social_share_button_tag(@debate.title) %></div></div>
-				<div class="okkk">-&nbsp;
-				<%=image_tag('twitter-blanc-01.png', :alt => 'Moutoners', class: "image")%>
-				<div class="okkkk"><%= twitter_button :url=> 'https://moutoners.com/debats' %>></div></div>
+			<span>Pour partager le débat :</br></span>
+			<div class="element">
+			</div>
 		</div>
 		
 		<div id="catcat">
