--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -1,3 +1,4 @@
+
 <% if @debate.article_id.presence %>
 	<%= render "partenariat", :debate => @debate%>
 <% else %>
@@ -184,7 +185,7 @@
 				<div class="okk"><%= social_share_button_tag(@debate.title) %></div></div>
 				<div class="okkk">
 				<%=image_tag('twitter-blanc-01.png', :alt => 'Moutoners', class: "image")%>
-				<div class="okkkk"><%= twitter_button :url=> 'https://moutoners.com/debats' %>></div></div>
+				<div class="okkkk"><%= twitter_button %></div></div>
 
 		</div>
 		
