--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -432,62 +432,20 @@
 	margin-left: 420px;
 	margin-bottom: 20px;
 	background-color: #AAD0FF;
-	height:50px;
+	height:60px;
 	width: 240px;
 	border-radius: 12px;
-	padding-top:15px;
+	padding-top:5px;
  	text-align: center;
 	color: black;
 	line-height: 20px;
 	font-family:"gotham-Bold";
 	font-size: 18px;
 	
-	.texte{
-	margin-top: -34px;
-	margin-left: 28px;
-	background-color: #000;
-	height: 24px;
-	width: 80px;
-	font-family: "gotham";
-	font-size: 16px;
-	color: #FFF;
-	padding-left: 8px;
-	padding-top:4px;
-		
-		.okk{
-		margin-top: -30px;
-		opacity:1;
-		}
-	}
-
-	
-	.ok{
-	position: relative;
-	z-index:0;
-	margin-left:-80px;
-	.okk{
-	margin-top: -30px;
-	opacity:0;
-	
-	.social-share-button{
-	margin-left:-20px;
-	}
-	}
-	
-	}
-	
-	
-	.okkk{
-	position: relative;
-	z-index:0;
-	margin-top: -31px;
-	margin-left: 100px;
-	.okkkk{
-	margin-top: -20px;
-	margin-left:20px;
-	opacity:0;
-	}
-	
+	.element{
+	margin-left: 77px;
+	padding-top:5px;
+	padding-bottom: 5px;
 	}
 	}
 	
@@ -1823,8 +1781,6 @@ border-image: url(border2.png) 13 fill repeat;
 	padding-top:5px;
 	padding-bottom: 5px;
 	}
-
-
 	}
 	
 	#votervoter{
