--- a/app/views/challenges/_british.html.erb
+++ b/app/views/challenges/_british.html.erb
@@ -1,10 +1,9 @@
 <section id="british">
 	<div class="container">
 		<div id="share">
-			<span>Partagez le débat sur</br></span>
-				<div class="ok">
-				<%=image_tag('facebook-blanc.png', :alt => 'Moutoners', class: "image")%>
-				<div class="okk"><%= social_share_button_tag(@challenge.title) %></div></div>
+			<span>Pour partager le débat :</br></span>
+			<div class="element">
+			</div>
 		</div>
 		<div class="row" id="british-title">
 			<div class="span2" id="british-gauche">
