--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -179,13 +179,8 @@
 							
 		<div id="share">
 			<span>Partagez le débat sur</br></span>
-				<div class="ok">
-				<%=image_tag('facebook-blanc.png', :alt => 'Moutoners', class: "image")%>
-				<div class="okk"><%= social_share_button_tag(@debate.title) %></div></div>
-				<div class="okkk">
-				<%=image_tag('twitter-blanc-01.png', :alt => 'Moutoners', class: "image")%>
-				<div class="okkkk"><%= twitter_button %></div></div>
-
+			<div class="element">
+			</div>
 		</div>
 		
 <% end %>
