--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -1355,7 +1355,7 @@ text-align: center;
 						width:190px;
 						background-color: #808080;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;
@@ -1389,7 +1389,7 @@ text-align: center;
 						width:190px;
 						background-color: #AAD0FF;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;						
@@ -1421,7 +1421,7 @@ text-align: center;
 						width:190px;
 						background-color: #808080;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;
@@ -1453,7 +1453,7 @@ text-align: center;
 						width:190px;
 						background-color: #FF6969;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;						
@@ -1576,37 +1576,10 @@ text-align: center;
 	font-family:"gotham-Bold";
 	font-size: 18px;
 	
-	.texte{
-	margin-top: -34px;
-	margin-left: 28px;
-	background-color: #000;
-	height: 24px;
-	width: 80px;
-	font-family: "gotham";
-	font-size: 16px;
-	color: #FFF;
-	padding-left: 8px;
-	padding-top:4px;
-		
-		.okk{
-		margin-top: -30px;
-		opacity:1;
-		}
-	}
-
-	
-	.ok{
-	position: relative;
-	z-index:0;
-	.okk{
-	margin-top: -30px;
-	opacity:0;
-	
-	.social-share-button{
-	margin-left:-20px;
-	}
-	}
-	
+	.element{
+	margin-left: 77px;
+	padding-top:5px;
+	padding-bottom: 5px;
 	}
 	}
 	
@@ -2123,7 +2096,7 @@ text-align: center;
 					width:190px;
 					background-color: #808080;
 					height: 35px;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 18px;
 					color: white;
 					text-align: center;
@@ -2158,7 +2131,7 @@ text-align: center;
 					width:190px;
 					background-color: #AAD0FF;
 					height: 35px;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 18px;
 					color: white;
 					text-align: center;						
@@ -2190,7 +2163,7 @@ text-align: center;
 					width:190px;
 					background-color: #808080;
 					height: 35px;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 18px;
 					color: white;
 					text-align: center;
@@ -2222,7 +2195,7 @@ text-align: center;
 					width:190px;
 					background-color: #FF6969;
 					height: 35px;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 18px;
 					color: white;
 					text-align: center;						
@@ -2344,37 +2317,10 @@ text-align: center;
 	font-family:"gotham-Bold";
 	font-size: 18px;
 	
-	.texte{
-	margin-top: -34px;
-	margin-left: 28px;
-	background-color: #000;
-	height: 24px;
-	width: 80px;
-	font-family: "gotham";
-	font-size: 16px;
-	color: #FFF;
-	padding-left: 8px;
-	padding-top:4px;
-		
-		.okk{
-		margin-top: -30px;
-		opacity:1;
-		}
-	}
-
-	
-	.ok{
-	position: relative;
-	z-index:0;
-	.okk{
-	margin-top: -30px;
-	opacity:0;
-	
-	.social-share-button{
-	margin-left:-20px;
-	}
-	}
-	
+	.element{
+	margin-left: 77px;
+	padding-top:5px;
+	padding-bottom: 5px;
 	}
 	}
 
@@ -3034,7 +2980,7 @@ text-align: center;
 						width:190px;
 						background-color: #808080;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;
@@ -3068,7 +3014,7 @@ text-align: center;
 						width:190px;
 						background-color: #AAD0FF;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;						
@@ -3100,7 +3046,7 @@ text-align: center;
 						width:190px;
 						background-color: #808080;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;
@@ -3132,7 +3078,7 @@ text-align: center;
 						width:190px;
 						background-color: #FF6969;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;						
@@ -3179,7 +3125,7 @@ text-align: center;
 						width:190px;
 						background-color: #808080;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;
@@ -3213,7 +3159,7 @@ text-align: center;
 						width:190px;
 						background-color: #CCE6FF;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;						
@@ -3245,7 +3191,7 @@ text-align: center;
 						width:190px;
 						background-color: #808080;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;
@@ -3277,7 +3223,7 @@ text-align: center;
 						width:190px;
 						background-color: #FF9090;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;						
@@ -3400,37 +3346,10 @@ text-align: center;
 	font-family:"gotham-Bold";
 	font-size: 18px;
 	
-	.texte{
-	margin-top: -34px;
-	margin-left: 28px;
-	background-color: #000;
-	height: 24px;
-	width: 80px;
-	font-family: "gotham";
-	font-size: 16px;
-	color: #FFF;
-	padding-left: 8px;
-	padding-top:4px;
-		
-		.okk{
-		margin-top: -30px;
-		opacity:1;
-		}
-	}
-
-	
-	.ok{
-	position: relative;
-	z-index:0;
-	.okk{
-	margin-top: -30px;
-	opacity:0;
-	
-	.social-share-button{
-	margin-left:-20px;
-	}
-	}
-	
+	.element{
+	margin-left: 77px;
+	padding-top:5px;
+	padding-bottom: 5px;
 	}
 	}
 	
@@ -4331,7 +4250,7 @@ text-align: center;
 						width:190px;
 						background-color: #808080;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;
@@ -4365,7 +4284,7 @@ text-align: center;
 						width:190px;
 						background-color: #AAD0FF;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;						
@@ -4397,7 +4316,7 @@ text-align: center;
 						width:190px;
 						background-color: #808080;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;
@@ -4429,7 +4348,7 @@ text-align: center;
 						width:190px;
 						background-color: #FF6969;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;						
@@ -4476,7 +4395,7 @@ text-align: center;
 						width:190px;
 						background-color: #808080;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;
@@ -4510,7 +4429,7 @@ text-align: center;
 						width:190px;
 						background-color: #CCE6FF;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;						
@@ -4542,7 +4461,7 @@ text-align: center;
 						width:190px;
 						background-color: #808080;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;
@@ -4574,7 +4493,7 @@ text-align: center;
 						width:190px;
 						background-color: #FF9090;
 						height: 35px;
-						font-family: "gotham";
+						font-family: "gotham-Bold";
 						font-size: 18px;
 						color: white;
 						text-align: center;						
@@ -4695,37 +4614,10 @@ text-align: center;
 	font-family:"gotham-Bold";
 	font-size: 18px;
 	
-	.texte{
-	margin-top: -34px;
-	margin-left: 28px;
-	background-color: #000;
-	height: 24px;
-	width: 80px;
-	font-family: "gotham";
-	font-size: 16px;
-	color: #FFF;
-	padding-left: 8px;
-	padding-top:4px;
-		
-		.okk{
-		margin-top: -30px;
-		opacity:1;
-		}
-	}
-
-	
-	.ok{
-	position: relative;
-	z-index:0;
-	.okk{
-	margin-top: -30px;
-	opacity:0;
-	
-	.social-share-button{
-	margin-left:-20px;
-	}
-	}
-	
+	.element{
+	margin-left: 77px;
+	padding-top:5px;
+	padding-bottom: 5px;
 	}
 	}
 	
