--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -1,3 +1,9 @@
+#communiquedepresse{
+	border: 1px Dashed black;
+	width: 670px;
+	margin-top: 20px;
+}
+
 #presentation1{
 width: 772px;
 margin: 30px 0px 30px 150px;
