--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -151,7 +151,7 @@
 					<li class: "tiret">|<li>
 					<li><%= link_to "F.A.Q.", faq_path, class: "lien"%></li>
 					<li class: "tiret">|<li>
-					<li><%= link_to "Présentation du jury", presse_path, class: "lien"%></li>										
+					<li><%= link_to "Communiqué de Presse", presse_path, class: "lien"%></li>										
 					<li class: "tiret">|<li>
 					<li><%= link_to "Contact", contact_path, class: "lien"%></li>										
 					<li class: "tiret">|<li>
