--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -44,6 +44,15 @@
          url(font-path('bebasneue-webfont.svg') + "#bebasneue-webfont") format('svg');
 }
 
+@font-face {
+    font-family: 'entypo';
+    src: url(font-path('entypo.eot') + "?#iefix") format('embedded-opentype'),
+         url(font-path('entypo.woff')) format('woff'), 
+         url(font-path('entypo.ttf'))  format('truetype'),
+         url(font-path('entypo.svg') + "#entypo") format('svg');
+}
+
+
 
 h1 a, h2 a, h3 a, h4 a, h5 a {
   color: #000000;
