--- a/app/views/debates/_partenariat.html.erb
+++ b/app/views/debates/_partenariat.html.erb
@@ -19,10 +19,8 @@
 			<span>Pour partager le débat :</br></span>
 			<div class="element">
 				<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
-				<a class="addthis_button_preferred_1">
-					<meta property="og:image" content="http://i2.ytimg.com/vi/1F7DKyFt5pY/default.jpg" /> 
-				</a>
-				<a class="addthis_button_preferred_3"></a>
+				<a class="addthis_button_preferred_2"></a>
+				<a class="addthis_button_preferred_1"></a>
 				<a class="addthis_button_preferred_4"></a>
 				</div>
 				<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
@@ -93,7 +91,7 @@
 					<div class="span5" id="gauche-ouvert">
 						
 					    <div class="image1">	
-							<%= link_to image_tag(@debate.avatar.url(:medium)), @debate, class: "image"%>
+							<%= image_tag(@debate.avatar.url(:medium), class: "image")%>
 							<%= image_tag("ouvert-image.png", alt: "Moutoners", class: "image")%>							
 
 						</div>
