--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -1563,21 +1563,22 @@ text-align: center;
 	}
 	
 	#share{
-	margin-left: 420px;
-	margin-bottom: 20px;
-	background-color: #AAD0FF;
-	height:60px;
-	width: 240px;
+	margin-left: 470px;
+	margin-bottom: 0px;
+	margin-top:20px;
+	background-color: white;
+	height:50px;
+	width: 140px;
 	border-radius: 12px;
-	padding-top:5px;
+	padding-top:9px;
  	text-align: center;
 	color: black;
 	line-height: 20px;
 	font-family:"gotham-Bold";
 	font-size: 18px;
-	
+	border: 1px Solid #AAD0FF;
 	.element{
-	margin-left: 77px;
+	margin-left: 17px;
 	padding-top:5px;
 	padding-bottom: 5px;
 	}
@@ -2304,21 +2305,22 @@ text-align: center;
 	}
 	
 	#share{
-	margin-left: 420px;
-	margin-bottom: 20px;
-	background-color: #AAD0FF;
-	height:60px;
-	width: 240px;
+	margin-left: 470px;
+	margin-bottom: 0px;
+	margin-top:20px;
+	background-color: white;
+	height:50px;
+	width: 140px;
 	border-radius: 12px;
-	padding-top:5px;
+	padding-top:9px;
  	text-align: center;
 	color: black;
 	line-height: 20px;
 	font-family:"gotham-Bold";
 	font-size: 18px;
-	
+	border: 1px Solid #AAD0FF;
 	.element{
-	margin-left: 77px;
+	margin-left: 17px;
 	padding-top:5px;
 	padding-bottom: 5px;
 	}
@@ -3333,21 +3335,22 @@ text-align: center;
 	}
 	
 	#share{
-	margin-left: 420px;
-	margin-bottom: 20px;
-	background-color: #AAD0FF;
-	height:60px;
-	width: 240px;
+	margin-left: 470px;
+	margin-bottom: 0px;
+	margin-top:20px;
+	background-color: white;
+	height:50px;
+	width: 140px;
 	border-radius: 12px;
-	padding-top:5px;
+	padding-top:9px;
  	text-align: center;
 	color: black;
 	line-height: 20px;
 	font-family:"gotham-Bold";
 	font-size: 18px;
-	
+	border: 1px Solid #AAD0FF;
 	.element{
-	margin-left: 77px;
+	margin-left: 17px;
 	padding-top:5px;
 	padding-bottom: 5px;
 	}
@@ -4601,21 +4604,22 @@ text-align: center;
 	}
 	
 	#share{
-	margin-left: 420px;
-	margin-bottom: 20px;
-	background-color: #AAD0FF;
-	height:60px;
-	width: 240px;
+	margin-left: 470px;
+	margin-bottom: 0px;
+	margin-top:20px;
+	background-color: white;
+	height:50px;
+	width: 140px;
 	border-radius: 12px;
-	padding-top:5px;
+	padding-top:9px;
  	text-align: center;
 	color: black;
 	line-height: 20px;
 	font-family:"gotham-Bold";
 	font-size: 18px;
-	
+	border: 1px Solid #AAD0FF;
 	.element{
-	margin-left: 77px;
+	margin-left: 17px;
 	padding-top:5px;
 	padding-bottom: 5px;
 	}
