--- a/app/views/debates/_partenariat.html.erb
+++ b/app/views/debates/_partenariat.html.erb
@@ -1,4 +1,3 @@
-<meta property="og:image" content="https://s3-eu-west-1.amazonaws.com/moutoner-first/users/profile11-01.png?AWSAccessKeyId=ASIAJYMGELUNRHVHRKYQ&Expires=1394117460&Signature=99M5LcKNKxIEkOQJTLkOOJK2UjY%3D&x-amz-security-token=AQoDYXdzEGAakALOKeJHjO8Y7jyhb0swJaJzK0uyo8qirQpaY6rJvYDdReOCYYCpbKhvg6/95vIUIFkRLG4m5QhekjsuGDQyY2EIqi/i5CppBaut27aKbaAy1xvjIRBUgA/k4EnWNWubfvPZOSIGQvUwqvKnLe24pooBXwgfqTRVbuFSb3zqbeWdxr1hY8eDXJyqf/awtXnXWTGchsvSpsHiXjrtrfey9k/KZV50DbQdcM/Ds/oGTpqvt2NZvF6hh0QJSXNyRryr6/ls6PQq2tNU5ucFikzSxuT%2BogTJ9aKVpWOLC3FCFW0v64jRghAZkjXAVeQNBSAcARDmTegLrRHVPzS0QkzczXEZScZrpf6jOwSLXG8OnNhLdCDQkuKYBQ%3D%3D" />
 <section id="partenariat-debate">
 	<div class="container">
 		<% if current_user && current_user.try(:admin?)%>
@@ -16,12 +15,11 @@
 		<% end %>		
 		
 		<div id="share">
-			<span>Pour partager le débat :</br></span>
 			<div class="element">
 				<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 				<a class="addthis_button_preferred_2"></a>
 				<a class="addthis_button_preferred_1"></a>
-				<a class="addthis_button_preferred_4"></a>
+				<a class="addthis_button_preferred_4"></a>				
 				</div>
 				<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
 				<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53187d105cd934bc"></script>			
@@ -92,7 +90,7 @@
 						
 					    <div class="image1">	
 							<%= link_to image_tag(@debate.avatar.url(:medium)), @debate, class: "image"%>
-							
+							<%= image_tag("ouvert-image.png", alt: "Moutoners", class: "image")%>							
 
 						</div>
 						
