--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -2,7 +2,7 @@
 	<h2>Create a debate</h2>
 	<h2>Create partenariat</h2>
 		<%= @last.id%>
-		<%= render"articles/form", article: @article, position: nil %>
+		<%= render"articles/form", article: @article, position: "1" %>
 		</br>
 		</br>
 	
