--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -253,7 +253,7 @@
 			<%= image_tag("bulle-explication0-01.png", class: "bulle3")%>													
 		</div>
 
-		<% if @challenge.context.presence%>
+		<% if @challenge.content.presence%>
 		<div class="row">
 			<div class "row" id="to-be-closed">
 				<div id="effective-context">
