--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -536,25 +536,7 @@
 	}
 	
 	#share{
-	margin-left: 470px;
-	margin-bottom: 0px;
-	margin-top:20px;
-	background-color: white;
-	height:50px;
-	width: 140px;
-	border-radius: 12px;
-	padding-top:9px;
- 	text-align: center;
-	color: black;
-	line-height: 20px;
-	font-family:"gotham-Bold";
-	font-size: 18px;
-	border: 1px Solid #AAD0FF;
-	.element{
-	margin-left: 17px;
-	padding-top:5px;
-	padding-bottom: 5px;
-	}
+	margin-bottom:-20px;
 	}
 	
 	#typechallenge{
@@ -567,7 +549,7 @@
 	font-style: italic;
 	
 	
-	.textex{
+	.texte{
 	float: right;
 	}	
 	}
