--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -1036,16 +1036,16 @@ text-align: center;
 		.titre{
 		margin-left: 40px;
 		height: 28px;
-		margin-top: 70px;
-		background-color: #808080;
-		font-family: "gotham";
+		margin-top: 65px;
+		background-color: #FF7575;
+		font-family: "gotham-Bold";
 		font-size: 17px;
 		text-align: center;
-		padding-top: 7px;
+		padding-top: 12px;
 		
 			.challenge{
 			color: white;
-			padding-top: 30px;
+			padding-top: 28px;
 			}
 		}
 		
