--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -8,34 +8,71 @@
 				</div>
 		<% end %>
 
-		<div id="share">
-			<div class="element">
-				<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
-				<a class="addthis_button_preferred_2"></a>
-				<a class="addthis_button_preferred_1"></a>
-				<a class="addthis_button_preferred_4"></a>				
-				</div>
-				<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-				<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53187d105cd934bc"></script>			
-			</div>
-		</div>
+
 		
 		<% if @challenge.type_deb == 2%>
 		<div class="row" id="typechallenge">
+			<div id="share">
+				<div class="element">
+					<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+					<a class="addthis_button_preferred_2"></a>
+					<a class="addthis_button_preferred_1"></a>
+					<a class="addthis_button_preferred_4"></a>				
+					</div>
+					<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+					<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53187d105cd934bc"></script>			
+				</div>
+			</div>
 			<span class="texte"> Lincoln Douglas Debate </span>
 		</div>
 			<%= render "challenges/lincoln_douglas", challenge: @challenge %>
 		<%elsif @challenge.type_deb == 3 %>
 		<div class="row" id="typechallenge">
+			<div class="row" id="typechallenge">
+				<div id="share">
+					<div class="element">
+						<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+						<a class="addthis_button_preferred_2"></a>
+						<a class="addthis_button_preferred_1"></a>
+						<a class="addthis_button_preferred_4"></a>				
+						</div>
+						<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+						<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53187d105cd934bc"></script>			
+					</div>
+				</div>
 			<span class="texte"> American Parliamentary Debate</span>
 		</div>
 			<%= render "challenges/american", challenge: @challenge %>
 		<%elsif @challenge.type_deb == 4 %>
 		<div class="row" id="typechallenge">
+			<div class="row" id="typechallenge">
+				<div id="share">
+					<div class="element">
+						<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+						<a class="addthis_button_preferred_2"></a>
+						<a class="addthis_button_preferred_1"></a>
+						<a class="addthis_button_preferred_4"></a>				
+						</div>
+						<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+						<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53187d105cd934bc"></script>			
+					</div>
+				</div>
 			<span class="texte"> Four corners Debate </span>
 		</div>
 			<%= render "challenges/four_corner", challenge: @challenge %>
 		<%elsif @challenge.type_deb == 8 %>
+		<div class="row" id="typechallenge">
+			<div id="share">
+				<div class="element">
+					<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+					<a class="addthis_button_preferred_2"></a>
+					<a class="addthis_button_preferred_1"></a>
+					<a class="addthis_button_preferred_4"></a>				
+					</div>
+					<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+					<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53187d105cd934bc"></script>			
+				</div>
+			</div>
 			<div class="row" id="typechallenge">
 				<span class="texte"> British Parliamentary Debate</span>
 			</div>
