--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -15,6 +15,7 @@
 @import "doulins";
 @import "arguments";
 @import "comments";
+@import "events";
 @import "social-share-button";
 @import "simpletextrotator";
 
