--- a/app/views/shared/_comment_badge.html.erb
+++ b/app/views/shared/_comment_badge.html.erb
@@ -1,34 +1,37 @@
-<section>
-	<div class="span7" id="comment">
+<section id="comment-event1">
+	<div class="span7" id="comment-event">		
 		<div class="row">
-			<div class="span3" id="gauche-comment">
-				<div class="row">
-					<div class="span1" id="imageuser">
+			<div class="span2" id="gauche-comment">
+				<div class="row" id="imageuser">
 						<%= image_tag comment.user.avatar.url(:small), class: "image" %>
-					</div>
-					<div class="span1" id="user">
+				</div>
+				<div class="row" id="user">
 						<%= comment.user.fitting_name%>
-					</div>
-				</div>
-				<div class="row" id="stats-comments">
-					<%= comment.count_positive %>
-				  <% if current_user && comment.has_evaluation?(:like_comment, current_user) && comment.valeur_vote(current_user) == 1.0%>
-				  <%= link_to image_tag("like-argument-01.png"), like_comment_comment_path(comment, type: "up"), method: "post"%> <span class="texte">|</span>
-				  <% else %>
-					<%= link_to image_tag("like-argument.png"), like_comment_comment_path(comment, type: "up"), method: "post"%> <span class="texte">|</span>
-				  <% end %>
-				  <%= comment.count_negative %>
-				  <% if current_user && comment.has_evaluation?(:like_comment, current_user) && comment.valeur_vote(current_user) == -1.0%>
-				  <%=link_to image_tag("dislike-argument-01.png"), like_comment_comment_path(comment, type: "down"), method: "post" %>
-				  <% else%>
-				  <%=link_to image_tag("dislike-argument.png"), like_comment_comment_path(comment, type: "down"), method: "post" %>
-				  <% end %>
 				</div>
 			</div>
-			<div class="span4" id="content">
-				<%= h Rinku.auto_link(comment.content).gsub(/\n/, '<br/>').html_safe  %>
-				</br>
+			<div class="span4" id="droite-comment">
+				<div class="row" id="content">
+					<%= h Rinku.auto_link(comment.content).gsub(/\n/, '<br/>').html_safe  %>
+				</div>
 			</div>
+		</div>
+	</div>
+	<div class="span2" id="stats-comments">
+		<div class="row" id="noteenhaut">
+			<%= comment.count_positive %>
+		  <% if current_user && comment.has_evaluation?(:like_comment, current_user) && comment.valeur_vote(current_user) == 1.0%>
+		  <%= link_to image_tag("like-argument-01.png"), like_comment_comment_path(comment, type: "up"), method: "post"%>
+		  <% else %>
+			<%= link_to image_tag("like-argument.png"), like_comment_comment_path(comment, type: "up"), method: "post"%>
+		  <% end %>
+		</div>
+		<div class="row" id="noteenbas">
+		  <%= comment.count_negative %>
+		  <% if current_user && comment.has_evaluation?(:like_comment, current_user) && comment.valeur_vote(current_user) == -1.0%>
+		  <%=link_to image_tag("dislike-argument-01.png"), like_comment_comment_path(comment, type: "down"), method: "post" %>
+		  <% else%>
+		  <%=link_to image_tag("dislike-argument.png"), like_comment_comment_path(comment, type: "down"), method: "post" %>
+		  <% end %>
 		</div>
 	</div>
 	<div class="row" id="erase">
