--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -65,7 +65,7 @@
 			Vous pouvez nous écrire :
 		</div>
 		<div class="nous-ecrire1">
-			p_ghorra@hotmail.com
+			paul@moutoners.fr
 		</div>
 	</div>
 	
