--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -16,7 +16,7 @@
 			<div class="text">1</div>
 		</div>
 		<div class="text2">
-			Nous ne disposons uniquement d'un droit d'affichage (CGU). Vous êtes responsables de vos propros.
+			Nous ne disposons uniquement que d'un droit d'affichage (CGU). Vous êtes responsables de vos propros.
 		</div>
 	</div>
 	
