--- a/app/views/static_pages/presse.html.erb
+++ b/app/views/static_pages/presse.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-	&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;Ceci est une image que vous pouvez copier:
+	<div class="span4 offset2">Ceci est une image que vous pouvez copier:</div>
 	<div id="communiquedepresse" class="span9 offset2"><%= image_tag("communique de presse-01.png")%></div>
 </div>
