--- a/app/views/shared/_argument_neutre_form.html.erb
+++ b/app/views/shared/_argument_neutre_form.html.erb
@@ -32,7 +32,7 @@
 			<div class='argument-photo'>
 					<div class="field">
 						<div class="field2">
-				    		<%= f.file_field :avatar, placeholder: "Rajouter une image" %>
+				    		<%= f.file_field :avatar, placeholder: "Ajouter une image" %>
 						</div>
 					</div>
 					<div class="legende">
